# squad

./: .gitignore  AGENTS.md  AUTOMODE_CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  SETUP_GUIDE.md  SUPPORT.md  index.html  package.json  server.mjs
.autohand/: .gitignore
.autohand/tools/: update_package_json_script.json
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  (+1 more)
daemon/: Cargo.toml  README.md
daemon/src/: analytics.rs  api.rs  auth.rs  cli.rs  config.rs  daemon.rs  install.rs  lib.rs  live_status.rs  native_tray.rs  state.rs  telemetry.rs  ui.rs
docs/: native-packaging-research.md  release.md
goals/: 01-agent-mission-control.md  02-role-depth-brain-cards.md  03-memory-inbox.md  04-permission-ladder.md  05-task-evidence-timeline.md  06-layered-context-model.md  07-evaluation-hooks.md  08-context-packs.md  09-run-recipes.md  10-agent-handoffs.md  11-skill-health-panel.md  12-failure-replay.md  README.md
public/: site.webmanifest
scripts/: check-agent-sdk.mjs  check-release-runtime-packaging.mjs  check-release-workflows.mjs  merge-release-manifests.mjs  package-squad-installers.mjs  package-squad-portable.mjs  package-squad-release.mjs  release-archive.mjs  resolve-squad-version.mjs  verify-channel-browser.mjs  verify-collaboration-handoff.mjs  verify-onboarding-browser.mjs  verify-onboarding-flow.mjs  verify-release-ref.sh
src/: App.jsx  data.js  locales.js  styles.css
(+31 files in other folders)
